--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ License: GPL-2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Depends: 
+Imports: 
     here,
-    utils
+    readr,
+    utils,
+    dplyr
